# code-pilot

./: pyproject.toml  run_agent.py
app/graph/: workflow.py
app/indexing/: chunker.py  embeddings.py  models.py  repository_index.py  vector_store.py
app/llm/: client.py
app/models/: state.py
app/nodes/: detect_mode.py  discover_repo.py  finalize.py  gather_context.py  implementer_agent.py  intake_task.py  planner_agent.py  review_agent.py  write_files.py
app/retrieval/: context_builder.py  retriever.py  semantic_search.py
app/tools/: file_tools.py  repo_tools.py
calculator/: main.py
generate_projects/calculator/: main.py
