[project]
name = "code-pilot"
version = "0.1.0"
description = "Autonomous coding agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-openai",
    "python-dotenv",
    "ipython>=9.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
